# quantum-annealytic-qalice

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  NOTES.MD  README.md  benchmark_numba.py  compare_exec_methods.py  environment.optional.yml  environment.yml  package-lock.json  package.json  perf.py  pitch.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements-pip.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
examples/: README.md  synth_volume_curve.csv
lattice_core/: __init__.py  cli.py  main.py
lattice_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
new_sqa/: README.md  ac_baseline.py  ac_qubo_sa.py  baseline_result.json  bench_results.csv  compare_exec_methods_2.py  perf.py  qubo_qa_result.json  qubo_sa_result.json  qubo_sqa_result.json  requirements.txt  run_my_code.py  run_optimizations.py
qalice_core/: __init__.py  __main__.py  baselines.py  cli.py  data_ingest.py  feature_engineering.py  propensity.py  splits.py  toggles.py
qalice_qi/: README.md  __init__.py  __main__.py  cli.py  compare.py  qubo_balanced_kmeans.py  runner.py  samplers.py
qalice_viz/: __init__.py  runtime_sentiment.py  visuals.py
qlattice_viz/: __init__.py  visuals.py
tests/: test_baselines_minimal.py  test_cli_stage1.py  test_execution_opt.py  test_feature_toggle_views.py  test_numba_optimizations.py  test_propensity_minimal.py  test_qubo_balanced_kmeans.py  test_runtime_sentiment.py  test_smoke.py  test_splits_timeaware.py  test_visuals_summary.py
(+69 files in other folders)
