[metadata]
name = lattice-core
version = attr: lattice_core.__version__
description = Baseline pipeline for Quantum Annealytics (FinTech Hackathon)
license = MIT

[options]
packages = find:
install_requires =
    typer[all]
    numpy
    pandas
    scikit-learn
    scipy
    networkx
    typer
python_requires = >=3.12

[options.entry_points]
console_scripts =
    lattice = lattice_core.main:run

[options.extras_require]
# run >>: pip install -e .[quantum]
quantum =
    pyqubo
    dimod
    openjij
    dwave-ocean-sdk
    qiskit
