[metadata]
name = qalice-core
version = file: VERSION
description = Baseline pipeline for Quantum Annealytics (FinTech Hackathon)
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-learn
    scipy
    networkx
    typer
python_requires = >=3.13

[options.entry_points]
console_scripts =
    qalice = qalice_core.main:run
    qi = qalice_core.cli:qi_app

[options.extras_require]
# run >>: pip install -e .[quantum]
quantum =
    pyqubo
    dimod
    openjij
    dwave-ocean-sdk
    qiskit
